--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,20 +4,21 @@
   <title>Newsletter</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div class='content'>
   <% if user_signed_in? %>
-    Signed in as <%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, :method => :delete %>
+    <p class='user'>Signed in as <%= current_user.email %> | <%= link_to "Sign out", destroy_user_session_path, :method => :delete %></p>
     <%= yield %>
   <% elsif request.path=="/users/sign_in" %>
+    <%= yield %>
+  <% elsif request.path=="/users/sign_up" %>
     <%= yield %>
   <% else %>
     You must <%= link_to "Sign in to continue.", new_user_session_path%>
   <% end %>
-
+</div>
 
 </body>
 </html>
