--- a/app/assets/stylesheets/drafts.css.scss
+++ b/app/assets/stylesheets/drafts.css.scss
@@ -1,8 +1,3 @@
-// Place all the styles related to the Lists controller here.
+// Place all the styles related to the Drafts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-table{
-  th{
-    text-align: left;
-  }
-}
