--- a/app/views/drafts/index.html.erb
+++ b/app/views/drafts/index.html.erb
@@ -1,21 +1,26 @@
-<h1>Listing drafts</h1>
+<h2>Listing drafts</h2>
 
-<table>
+<table width="100%">
   <tr>
-    <th>Date</th>
-    <th>Draft</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th width="80%">Draft</th>
+    <th width="6%">status</th>
+    <th width="5%"></th>
+    <th width="4%"></th>
+    <th width="5%"></th>
   </tr>
 
 <% @drafts.each do |draft| %>
   <tr>
-    <td><%= draft.date %></td>
     <td><%= draft.draft %></td>
-    <td><%= link_to 'Show', draft %></td>
+    <td><% if draft.use %>
+          <font color=green>active</font>
+        <% else %>
+          <%= link_to 'inactive', activate_draft_path(draft) %>
+        <% end %>
+    </td>
+    <td><%= link_to 'View', draft %></td>
     <td><%= link_to 'Edit', edit_draft_path(draft) %></td>
-    <td><%= link_to 'Destroy', draft, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+    <td><%= link_to 'Delete', draft, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
