--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,19 +1,19 @@
 <h3>List of emails</h3>
 
-<table width='600px'>
+<table width='100%'>
   <tr>
-    <th width='25%'>Name</th>
-    <th width='35%'>Email</th>
-    <th width='10%'></th>
-    <th width='10%'></th>
-    <th width='10%'></th>
+    <th width='40%'>Name</th>
+    <th width='45%'>Email</th>
+    <th width='6%'></th>
+    <th width='4%'></th>
+    <th width='5%'></th>
   </tr>
 
 <% @lists.each do |list| %>
   <tr>
     <td><%= list.name %></td>
     <td><%= list.email %></td>
-    <td><%= link_to 'Show', list %></td>
+    <td><%= link_to 'View', list %></td>
     <td><%= link_to 'Edit', edit_list_path(list) %></td>
     <td><%= link_to 'Delete', list, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
   </tr>
